sfdx/force-app/main/default/objects/Stripe_Connection__c/Stripe_Connection__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Stripe_Connection</label>
</CustomObject>