sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>The API key to use for communicating with the Stripe Billing Connector platform.</description>
    <inlineHelpText>The API key to use for communicating with the Stripe Billing Connector platform.</inlineHelpText>
    <label>API Key</label>
    <type>TextArea</type>
</CustomField>