sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Api_Percentage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Api_Percentage_Limit__c</fullName>
    <label>Api Percentage Limit</label>
    <type>TextArea</type>
</CustomField>