sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency__c</fullName>
    <label>Default Currency</label>
    <type>TextArea</type>
</CustomField>