sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <label>Last Synced</label>
    <type>TextArea</type>
</CustomField>