sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Primary_Stripe_Account_Livemode__c.field-meta.xml
<CustomField>
    <fullName>Primary_Stripe_Account_Livemode__c</fullName>
    <label>Primary Stripe Account Livemode</label>
    <description>The first Stripe Account livemode connected to the app.</description>
    <inlineHelpText>This is the first Stripe Account livemode connected to the app.</inlineHelpText>
    <type>Text</type>
    <length>50</length>
</CustomField>