sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Salesforce_Connected__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Connected__c</fullName>
    <description>Is Salesforce Connected?</description>
    <inlineHelpText>Is Salesforce Connected?</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Salesforce Connected</label>
    <type>Checkbox</type>
</CustomField>