sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Stripe_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Account_Id__c</fullName>
    <label>Stripe Account Id</label>
    <type>TextArea</type>
</CustomField>