sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Stripe_Connected__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Connected__c</fullName>
    <description>Is Stripe Connected?</description>
    <inlineHelpText>Is Stripe Connected?</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Stripe Connected</label>
    <type>Checkbox</type>
</CustomField>