sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Sync_Record_Retention__c.field-meta.xml
<CustomField>
    <fullName>Sync_Record_Retention__c</fullName>
    <description>How many records to retain when pruning Sync Record Records.</description>
    <inlineHelpText>How many records to retain when pruning Sync Record Records.</inlineHelpText>
    <label>Sync Record Retention</label>
    <type>TextArea</type>
</CustomField>