sfdx/force-app/main/default/objects/Stripe_Connection__c/fields/Sync_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sync_Start_Date__c</fullName>
    <label>Sync Start Date</label>
    <type>TextArea</type>
</CustomField>